@startuml
skinparam classAttributeIconSize 0

class EmailDB {
  +sendEmali(emailOrig,emailDest,assunto,mensagem)
}

class RealizaEncomendaController {
    +enviarNotaTransferencia(fOrig,fDest,prod,qntd)
}

class RealizaEncomendaUI {
}

RealizaEncomendaUI ..> RealizaEncomendaController
RealizaEncomendaController ..> EmailDB

@enduml